--- a/css/style.sass
+++ b/css/style.sass
@@ -64,6 +64,27 @@ a
 .v-float-right
   float: right
 
+.v-decor, .v-decor2, .v-decor3, .v-decor4, .v-decor5
+  text-align: center
+  margin: 15px 0
+  position: relative
+  transition: all 0.6s ease
+  .v-decor-line
+    position: absolute
+    width: 10px
+    height: 2px
+    background: $white
+    top: 40%
+    transform: translate(-50%, 50%)
+    left: 50%
+    z-index: 10
+    transition: all 0.6s ease
+  .-active
+    width: 800px
+  img
+    position: relative
+    z-index: 99
+
 .v-intro
   background: rgba($black, 0.5)
   padding: 30px 0
@@ -78,12 +99,8 @@ a
     line-height: 1.035
     text-align: center
   &__text
-    background: url('../img/dec.png') no-repeat
-    background-position: top
-    background-size: 800px
-    padding-top: 55px
     width: 800px
-    margin: 15px auto 30px
+    margin: 0px auto 30px
     p
       padding: 0 15px
       font-size: 19px
@@ -178,7 +195,7 @@ a
     margin-top: 10px
     padding: 40px
     box-sizing: border-box
-    max-height: 330px
+    height: auto
     overflow: hidden
     .v-block__desc
       font-size: 32px
@@ -192,6 +209,22 @@ a
   &__video
     height: 540px
     position: relative
+    overflow: hidden
+    &:hover
+      .v-block__video-btn
+        transform: scale(1.1)
+    &-btn
+      position: absolute
+      display: block
+      top: 50%
+      left: 50%
+      margin: -35px 0 0 -65px
+      width: 120px
+      height: 85px
+      z-index: 30
+      cursor: pointer
+      transform: scale(1)
+      transition: all 0.6s ease
     &-poster
       position: absolute
       display: block
@@ -232,10 +265,6 @@ a
     text-transform: uppercase
     line-height: 1
     text-align: center
-    background: url('../img/dec.png') no-repeat
-    background-position: bottom
-    background-size: 768px
-    padding-bottom: 50px
     &-desc
       text-transform: uppercase
       text-align: center
@@ -377,6 +406,7 @@ a
   position: relative
   top: -5px
   left: 0
+  z-index: 999
   &::before
     content: ''
     position: absolute
