--- a/css/style.css
+++ b/css/style.css
@@ -276,6 +276,8 @@ a {
       line-height: 2;
       position: relative;
       z-index: 999; }
+    .v-block__title br {
+      display: none; }
   .v-block__item {
     width: 495px;
     height: 610px;
@@ -356,8 +358,12 @@ a {
     .v-label__title:hover {
       background: rgba(111, 16, 52, 0.7); }
     .v-label__title::after {
-      content: url("../img/arrow.png");
-      height: 35px;
+      background: url("../img/arrow.png") no-repeat;
+      background-size: contain;
+      display: inline-block;
+      width: 20px;
+      height: 30px;
+      content: "";
       position: absolute;
       -webkit-transform: translateY(-50%);
           -ms-transform: translateY(-50%);
@@ -373,7 +379,10 @@ a {
 .-label-active ~ .v-label__text {
   visibility: visible; }
 .-label-active::after {
-  content: url("../img/arrow-down.png") !important; }
+  width: 30px;
+  height: 20px;
+  background: url("../img/arrow-down.png") no-repeat !important;
+  background-size: contain; }
 
 .v-v-label {
   background: #6f1034;
@@ -574,6 +583,21 @@ a {
             transition: background-color 0.6s ease; }
     .v-facts__dot-active, .v-facts__dot:hover {
       background-color: #fff; }
+  .v-facts__prev, .v-facts__next {
+    cursor: pointer;
+    position: absolute;
+    bottom: 125px;
+    width: 45px;
+    height: 45px;
+    display: none; }
+  .v-facts__next {
+    right: 10px;
+    background: url("../img/arrow-right.png") no-repeat;
+    background-size: contain; }
+  .v-facts__prev {
+    left: 10px;
+    background: url("../img/arrow-left.png") no-repeat;
+    background-size: contain; }
 
 .v-slider {
   width: 1100px;
@@ -748,46 +772,98 @@ a {
     margin-top: 0;
     padding: 55px 0; }
     .v-intro__title {
-      font-size: 52px; }
+      width: 100%;
+      font-size: 70px; }
     .v-intro__text {
       width: 100%; }
       .v-intro__text p {
-        padding: 0 3px; }
+        padding: 0 3px;
+        font-size: 28px; }
     .v-intro__link {
-      margin: 195px auto 0; }
+      margin: 255px auto 0; }
 
   .v-decor img, .v-decor2 img, .v-decor3 img, .v-decor4 img, .v-decor5 img {
     height: 60px; }
   .v-decor .v-decor-line, .v-decor2 .v-decor-line, .v-decor3 .v-decor-line, .v-decor4 .v-decor-line, .v-decor5 .v-decor-line {
     top: 43%; }
 
-  .v-block.-first .v-block__desc {
-    padding: 30px 3px;
-    margin-top: 110px; }
+  .v-block.-first {
+    margin-top: 180px; }
+    .v-block.-first .v-block__desc {
+      padding: 30px 3px; }
+  .v-block__desc {
+    font-size: 30px; }
   .v-block__video {
     height: 50vw;
     overflow: visible;
-    margin-top: 350px; }
+    margin-top: 585px; }
     .v-block__video-desc {
-      top: -365px;
+      top: -495px;
       width: 100%;
-      height: 365px;
-      padding: 15px 3px; }
+      height: 495px;
+      padding: 15px 3px;
+      font-size: 30px; }
   .v-block__title {
-    font-size: 52px; }
+    font-size: 70px; }
     .v-block__title-desc {
-      padding: 5px 3px 25px; }
+      padding: 5px 3px 25px;
+      font-size: 28px; }
+    .v-block__title br {
+      display: block; }
   .v-block__item {
-    height: 720px; }
+    height: 1000px;
+    width: 100%; }
+    .v-block__item-title {
+      font-size: 60px; }
+    .v-block__item-text {
+      font-size: 30px; }
   .v-block__item-title, .v-block__item-text {
     background: rgba(6, 8, 9, 0.5); }
   .v-block__item-text {
     margin: 0; }
   .v-block-second-i .v-block__item-text,
   .v-block-second-i .v-float-right .v-block__item-text {
-    padding: 0px 3px 5px; }
+    padding: 0px 3px 15px; }
   .v-block-second-i .v-block__item-title {
     padding-left: 3px; }
+  .v-block-second-v .v-block__item-text {
+    background: transparent; }
+  .v-block__test-link {
+    width: 310px; }
+  .v-block__test > span {
+    font-size: 34px; }
+  .v-block__item-v__wrapper {
+    width: 100%;
+    margin: 25px 3px; }
+  .v-block__item-v:nth-child(odd) .v-block__item-v__wrapper {
+    float: none;
+    padding-left: 0; }
+  .v-block.-third .v-block__title-desc {
+    padding: 80px 3px 40px; }
+  .v-block.-sixth {
+    padding: 25px 3px; }
+  .v-block.-seventh p {
+    width: 100%;
+    padding-left: 3px; }
+    .v-block.-seventh p:nth-child(3) {
+      float: right;
+      margin: 350px 0; }
+  .v-block.-seventh .v-block__item-text {
+    background: transparent; }
+  .v-block.-eighth {
+    padding: 40px 3px; }
+    .v-block.-eighth .v-block__desc {
+      padding: 30px 0px; }
+
+  .v-v-label {
+    margin-top: 300px;
+    max-height: 100%;
+    padding: 20px 25px 80px;
+    height: auto; }
+    .v-v-label__title {
+      font-size: 45px; }
+    .v-v-label__text {
+      font-size: 32px; }
 
   .v-img-icons {
     width: 90%; }
@@ -813,5 +889,80 @@ a {
     .v-img-icons::before {
       left: 0; }
 
-  .v-label__title {
-    padding: 10px 3px; } }
+  .v-label {
+    margin-right: 30px; }
+    .v-label__title {
+      padding: 30px 3px;
+      font-size: 40px; }
+    .v-label__text {
+      padding: 0 3px 30px;
+      font-size: 30px; }
+
+  .v-facts {
+    margin-top: 410px; }
+    .v-facts__title {
+      font-size: 8vw;
+      text-align: center;
+      line-height: 1; }
+    .v-facts__text {
+      font-size: 28px;
+      margin-top: 0;
+      padding: 0 3px 0 3px;
+      line-height: 1.2; }
+    .v-facts__item {
+      height: 335px; }
+    .v-facts__dots {
+      top: -50px;
+      bottom: 0; }
+    .v-facts__desc {
+      top: -250px;
+      padding: 25px 0px;
+      height: 200px;
+      width: 100%; }
+      .v-facts__desc-back {
+        height: 395px;
+        width: 100%;
+        top: -395px;
+        padding: 35px 3px 0 3px; }
+    .v-facts__prev, .v-facts__next {
+      display: block; }
+    .v-facts__dot {
+      height: 20px;
+      width: 20px; }
+
+  .v-slider__dot {
+    height: 20px;
+    width: 20px; }
+  .v-slider__prev {
+    left: 10px; }
+  .v-slider__next {
+    right: 10px; }
+  .v-slider__desc {
+    bottom: 90px;
+    height: 145px; }
+  .v-slider__text {
+    padding: 0 55px; }
+
+  .v-footer__desc {
+    padding: 30px 3px 50px;
+    font-size: 28px; }
+  .v-footer__link {
+    margin: 0 auto; }
+  .v-footer__social-title {
+    font-size: 40px; }
+  .v-footer__social-icons {
+    width: 100%; }
+
+  .v-social-icon {
+    width: 65px;
+    height: 75px;
+    background-size: cover; }
+  .v-social-vk {
+    background-position: -165px 5px; }
+  .v-social-fb {
+    background-position: 12px 0; }
+  .v-social-ok {
+    width: 60px;
+    background-position: -40px 0; }
+  .v-social-tw {
+    background-position: -95px 5px; } }
