--- a/css/style.css
+++ b/css/style.css
@@ -981,7 +981,7 @@ a {
       height: 15vw; }
 
   #v-domovoy .v-img-icons, #v-demon .v-img-icons, #v-rusalka .v-img-icons, #v-oboroten .v-img-icons {
-    top: 80%; }
+    top: 94%; }
 
   #v-rusalka, #v-demon, #v-oboroten {
     margin: 30px 0; }
@@ -1094,3 +1094,6 @@ a {
     background-position: -40px 0; }
   .v-social-tw {
     background-position: -95px 5px; } }
+@media only screen and (min-width: 320px) and (max-width: 500px) {
+  .v-label__text {
+    font-size: 8vw; } }
