--- a/css/style.css
+++ b/css/style.css
@@ -1046,7 +1046,8 @@ a {
       box-sizing: border-box;
       overflow: visible; }
   .v-facts__prev, .v-facts__next {
-    display: block; }
+    display: block;
+    width: 25px; }
   .v-facts__dot {
     height: 20px;
     width: 20px; }
@@ -1055,14 +1056,16 @@ a {
     height: 20px;
     width: 20px; }
   .v-slider__prev {
-    left: 10px; }
+    left: 10px;
+    width: 25px; }
   .v-slider__next {
-    right: 10px; }
+    right: 10px;
+    width: 25px; }
   .v-slider__desc {
     bottom: 70px;
     height: 170px; }
   .v-slider__text {
-    padding: 0 55px; }
+    padding: 0 35px; }
 
   .v-footer__desc {
     padding: 30px 3px 50px;
