--- a/css/style.css
+++ b/css/style.css
@@ -1036,7 +1036,8 @@ a {
         -ms-flex-direction: column-reverse;
             flex-direction: column-reverse; }
     .v-facts__item img {
-      height: 200px; }
+      height: auto;
+      max-height: 50vw; }
   .v-facts__dots {
     top: 400px;
     bottom: 0; }
@@ -1056,7 +1057,8 @@ a {
       overflow: visible; }
   .v-facts__prev, .v-facts__next {
     display: block;
-    width: 25px; }
+    width: 25px;
+    bottom: 20%; }
   .v-facts__dot {
     height: 20px;
     width: 20px; }
