--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,18 @@
   color: #fff;
   overflow: hidden; }
 
+.v-layer {
+  background-color: rgba(6, 8, 9, 0.5);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%; }
+
+.v-intro-wrapper, .v-block-wrapper {
+  position: relative;
+  z-index: 99; }
+
 .v-heroes {
   position: relative;
   height: 1px; }
@@ -74,7 +86,8 @@
 .v-intro {
   background: url("../img/intro_back.jpg") no-repeat;
   background-size: cover;
-  padding: 30px 0; }
+  padding: 30px 0;
+  position: relative; }
   .v-intro__title {
     width: 500px;
     margin: 0 auto;
@@ -123,14 +136,16 @@
       color: #6f1034; }
 
 .v-block {
-  font-family: "agf"; }
+  font-family: "agf";
+  position: relative; }
   .v-block.-first {
-    padding-top: 15px;
+    padding-top: 40px;
     background: url("../img/back1.jpg") no-repeat;
-    background-size: 100% 50%;
-    background-position: top; }
+    background-size: 100% 100%; }
     .v-block.-first .v-block__desc {
-      line-height: 1.5; }
+      line-height: 1.5;
+      background: rgba(6, 8, 9, 0.5);
+      padding: 30px 50px 50px; }
     .v-block.-first p:last-child {
       margin-top: 30px; }
   .v-block.-second {
@@ -171,13 +186,15 @@
     font-family: "agf";
     line-height: 1.711;
     text-align: center;
-    padding: 25px 140px;
+    padding: 28px 140px;
     box-sizing: border-box; }
+    .v-block.-sixth p {
+      margin: 0; }
   .v-block.-seventh {
     padding: 60px 0 55px;
     background: #060809 url("../img/back3.jpg") no-repeat;
-    background-position: 1px 100%;
-    background-size: 100% 17%; }
+    background-position: 2px 100%;
+    background-size: 100% 20%; }
     .v-block.-seventh .v-block__item {
       text-align: left;
       height: auto;
@@ -185,17 +202,20 @@
     .v-block.-seventh p {
       width: 530px;
       padding-left: 50px;
-      box-sizing: border-box; }
+      box-sizing: border-box;
+      position: relative; }
     .v-block.-seventh .v-float-right {
-      margin: 40px 0; }
+      margin: 46px 0; }
   .v-block.-eighth {
-    padding: 30px 40px 0;
-    box-sizing: border-box;
     background: url("../img/back3a.jpg") no-repeat;
     background-size: 100% 100%;
     height: 830px;
     overflow: hidden;
     position: relative; }
+    .v-block.-eighth .v-block-wrapper {
+      padding: 30px 40px;
+      box-sizing: border-box;
+      background: rgba(6, 8, 9, 0.5); }
     .v-block.-eighth .v-block__desc {
       font-size: 32px;
       font-family: "bodoni";
@@ -210,6 +230,8 @@
     font-size: 23px;
     line-height: 1.609;
     padding: 30px 50px; }
+    .v-block__desc p {
+      margin: 0; }
   .v-block__video {
     height: 544px;
     position: relative;
@@ -341,7 +363,7 @@
       .v-block__test-link.v-link-white {
         width: 530px;
         height: 100px;
-        margin: 0 auto 15px;
+        margin: 10px auto 15px;
         background: #fff;
         color: #6f1034;
         border: 2px solid #6f1034; }
@@ -413,7 +435,7 @@
   position: relative;
   text-align: center;
   height: auto;
-  margin-top: 15px;
+  margin-top: 22px;
   box-sizing: border-box; }
   .v-v-label__title {
     font-size: 32px;
@@ -747,6 +769,7 @@
   padding-bottom: 70px;
   background: url("../img/footer_back.jpg") no-repeat;
   background-size: cover;
+  height: 689px;
   overflow: hidden; }
   .v-footer__desc {
     background: #060809;
@@ -755,12 +778,12 @@
     text-transform: uppercase;
     line-height: 2.105;
     text-align: center;
-    padding: 30px 60px 50px;
+    padding: 40px 60px 60px;
     box-sizing: border-box; }
   .v-footer__social {
     background: #fff;
     color: #6f1034;
-    padding: 30px 60px 40px; }
+    padding: 30px 60px 52px; }
     .v-footer__social-title {
       font-size: 23px;
       font-family: "agf";
@@ -784,7 +807,6 @@
       margin: 15px auto 0; }
 
 .v-social-icon {
-  margin: 0 5px;
   width: 35px;
   height: 40px;
   background: url("../img/social.png") no-repeat;
@@ -810,15 +832,16 @@
   height: 830px;
   padding: 30px 40px 0;
   box-sizing: border-box;
-  background: url("../img/test_back.jpg");
-  background-size: 100% 100%;
-  font-family: "agf"; }
+  font-family: "agf";
+  background: url("../img/back3a.jpg");
+  background-size: 100% 100%; }
   .v-test__question {
     font-size: 32px;
     line-height: 1.438;
     text-align: center;
-    height: 125px;
-    max-height: 125px;
+    height: auto;
+    max-height: 155px;
+    margin-bottom: 30px;
     overflow: hidden; }
     .v-test__question h3 {
       margin: 0; }
@@ -879,7 +902,14 @@
   background: url("../img/test_back-result.jpg");
   background-size: 100% 100%;
   height: auto;
-  padding-bottom: 290px; }
+  padding: 0 0 200px 0;
+  box-sizing: border-box;
+  height: 1510px; }
+  .v-test-result .v-layer {
+    display: none; }
+  .v-test-result .v-block-wrapper {
+    background: rgba(6, 8, 9, 0.5);
+    padding: 30px 40px 60px; }
   .v-test-result__content {
     width: 800px;
     margin: 0 auto;
@@ -902,6 +932,9 @@
     box-sizing: border-box;
     border: 2px solid #fff;
     position: relative; }
+    .v-test-result__img img {
+      max-width: 100%;
+      height: auto; }
     .v-test-result__img::before {
       position: absolute;
       content: "";
@@ -921,7 +954,7 @@
     .v-test-result__text p:nth-child(2) {
       margin-top: 50px; }
   .v-test-result__social {
-    padding: 30px 60px 40px; }
+    padding: 10px 60px 15px; }
     .v-test-result__social-title {
       font-size: 23px;
       font-family: "agf";
@@ -946,7 +979,6 @@
     margin: 30px auto 0; }
 
 .v-tr-icon {
-  margin: 0 5px;
   width: 35px;
   height: 40px;
   background: url("../img/tr-social.png") no-repeat;
@@ -969,7 +1001,7 @@
   background-position: -115px 5px; }
 
 @media only screen and (max-width: 769px) {
-  .v-intro, .v-block, .v-block-second-v, .v-block__item-wrapper, .v-facts, .v-slider, .v-footer {
+  .v-container {
     width: 100%; }
 
   .v-img-first, .v-img-second, .v-img-third, .v-img-fourth, .v-img-eighth, .v-img-nineth {
@@ -982,12 +1014,14 @@
     margin-top: 0;
     padding: 55px 0;
     background: url("../img/mob/intro_back.jpg") no-repeat;
-    background-size: 100% 100%; }
+    background-size: cover;
+    background-position: center; }
     .v-intro__title {
       width: 100%;
       font-size: 4em; }
     .v-intro__text {
-      width: 100%; }
+      width: 100%;
+      margin-bottom: 394px; }
       .v-intro__text p {
         padding: 0 3px;
         font-size: 24px; }
@@ -1002,7 +1036,8 @@
         min-height: 450px; }
 
   .v-decor img, .v-decor-test img {
-    height: 60px; }
+    height: 50px;
+    width: 50px; }
   .v-decor .v-decor-line, .v-decor-test .v-decor-line {
     top: 43%; }
 
@@ -1012,8 +1047,9 @@
   .v-block.-first {
     padding-top: 180px;
     background: url("../img/mob/back1.jpg") no-repeat;
-    background-size: 100% 100%;
-    background-position: top; }
+    background-size: cover;
+    background-position: top;
+    background-position: center; }
     .v-block.-first .v-block__desc {
       padding: 30px 3px;
       position: relative;
@@ -1075,20 +1111,15 @@
     margin: 0; }
   .v-block.-second {
     background: url("../img/mob/back2.jpg") no-repeat;
-    background-size: cover; }
+    background-size: cover;
+    background-position: center; }
   .v-block-second-i .v-block__item-text,
   .v-block-second-i .v-float-right .v-block__item-text {
     padding: 0px 3px 15px; }
   .v-block-second-i .v-block__item-title {
     padding-left: 3px; }
   .v-block-second-i .v-block__img {
-    width: 450px;
-    margin-left: 50%;
-    -webkit-transform: translateX(-50%);
-        -ms-transform: translateX(-50%);
-            transform: translateX(-50%);
-    min-width: 450px;
-    max-width: 450px;
+    width: 100%;
     margin-top: -300px; }
   .v-block-second-v .v-block__item-text, .v-block-second-v .v-block__item-title {
     background: transparent; }
@@ -1118,19 +1149,25 @@
     .v-block.-seventh .v-float-right {
       margin: 0; }
     .v-block.-seventh .v-block__item-text {
-      background: transparent;
-      padding-bottom: 150px; }
+      background: transparent; }
     .v-block.-seventh .v-hidden:last-child {
       margin-top: 40px;
       width: 300px;
       position: absolute;
       right: 0; }
   .v-block.-eighth {
-    padding: 40px 3px;
+    padding: 40px 0px;
     background: url("../img/mob/back3a.jpg") no-repeat;
-    background-size: 100% 100%; }
+    background-size: cover;
+    background-position: top right; }
     .v-block.-eighth .v-block__desc {
       padding: 30px 0px; }
+    .v-block.-eighth .v-block__test {
+      left: 50%;
+      -webkit-transform: translateX(-50%);
+          -ms-transform: translateX(-50%);
+              transform: translateX(-50%);
+      width: 100%; }
 
   .v-img-fifth, .v-img-sixth {
     position: absolute;
@@ -1179,7 +1216,8 @@
       left: 0; }
 
   #v-domovoy .v-block__item-wrapper {
-    background: #060809; }
+    background: url("../img/mob/back2a.jpg") no-repeat;
+    background-size: 100% 20%; }
 
   .v-label {
     margin-right: 30px;
@@ -1258,7 +1296,9 @@
 
   .v-footer {
     background: url("../img/mob/footer_back.jpg") no-repeat;
-    background-size: contain; }
+    background-position: bottom;
+    background-size: 100%;
+    height: auto; }
     .v-footer__desc {
       padding: 30px 3px 50px;
       font-size: 2em; }
@@ -1269,24 +1309,84 @@
     .v-footer__social-title {
       font-size: 40px; }
     .v-footer__social-icons {
-      width: 100%;
+      width: 75%;
       -webkit-justify-content: space-around;
           -ms-flex-pack: distribute;
               justify-content: space-around; }
 
   .v-social-icon {
-    width: 65px;
-    height: 75px;
+    width: 55px;
+    height: 65px;
     background-size: cover; }
   .v-social-vk {
-    background-position: -165px 5px; }
+    background-position: -145px 5px; }
   .v-social-fb {
-    background-position: 12px 0; }
+    background-position: 9px 0; }
   .v-social-ok {
-    width: 60px;
-    background-position: -40px 0; }
+    width: 50px;
+    background-position: -35px 0; }
   .v-social-tw {
-    background-position: -95px 5px; } }
+    background-position: -80px 5px; }
+
+  .v-test {
+    background: url("../img/mob/back3a.jpg") no-repeat;
+    background-size: cover;
+    background-position: top right;
+    padding: 30px 0px 60px;
+    height: auto; }
+    .v-test__pages {
+      font-size: 8vw; }
+    .v-test__question {
+      font-size: 5vw;
+      line-height: 1.2;
+      max-height: 210px; }
+    .v-test__answer {
+      font-size: 5vw;
+      line-height: 1.5; }
+      .v-test__answer > div {
+        padding: 7px 0px 7px 130px; }
+    .v-test-btn:not(checked) + label:before, .v-test-btn:not(checked) + label:after {
+      left: -115px;
+      width: 90px;
+      height: 90px; }
+
+  .v-test-result {
+    background: url("../img/mob/test_back-result.jpg");
+    background-size: cover;
+    background-position: top right; }
+    .v-test-result__content {
+      width: 100%; }
+    .v-test-result__img {
+      padding: 3px; }
+    .v-test-result__text {
+      font-size: 5vw; }
+      .v-test-result__text p:nth-child(2) {
+        margin-top: 30px; }
+    .v-test-result__social {
+      padding: 10px 3px 30px; }
+      .v-test-result__social-title {
+        font-size: 6vw; }
+      .v-test-result__social-icons {
+        width: 75%; }
+    .v-test-result .v-block-wrapper {
+      padding: 30px 3px; }
+    .v-test-result .v-block__title {
+      font-size: 8vw; }
+
+  .v-tr-icon {
+    background: url("../img/social.png") no-repeat;
+    width: 55px;
+    height: 65px;
+    background-size: cover; }
+  .v-tr-vk {
+    background-position: -145px 5px; }
+  .v-tr-fb {
+    background-position: 9px 0; }
+  .v-tr-ok {
+    width: 50px;
+    background-position: -35px 0; }
+  .v-tr-tw {
+    background-position: -80px 5px; } }
 @media only screen and (min-width: 320px) and (max-width: 500px) {
   .v-intro__text p {
     font-size: 5vw; }
@@ -1307,7 +1407,7 @@
     font-size: 7vw; }
 
   .v-facts__title {
-    font-size: 12vw;
+    font-size: 10vw;
     white-space: normal; }
   .v-facts__text {
     font-size: 4.5vw; }
@@ -1333,20 +1433,40 @@
   .v-block__item-text {
     font-size: 6vw; }
   .v-block-second-i .v-block__img {
+    width: 450px;
+    margin-left: 50%;
+    -webkit-transform: translateX(-50%);
+        -ms-transform: translateX(-50%);
+            transform: translateX(-50%);
+    min-width: 450px;
+    max-width: 450px;
     margin-top: -400px; }
 
   .v-footer__social-title {
     font-size: 8vw; }
 
-  .v-block__test-link, .v-intro__link, .v-footer__link {
+  .v-block__test-link.v-link-white, .v-intro__link, .v-block__test-link.v-link-violet {
     width: 80%;
-    font-size: 12vw; }
+    font-size: 10vw;
+    margin: 0 auto 10px; }
 
   .v-img-icons {
     width: 85%; }
     .v-img-icons__item {
       width: 18vw;
       height: 18vw; }
+      .v-img-icons__item img {
+        max-width: 70%; }
 
   .v-slider__text {
-    font-size: 4.5vw; } }
+    font-size: 4.5vw; }
+
+  .v-test-result__social-icons, .v-footer__social-icons {
+    width: 85%; }
+
+  .v-test__answer > div {
+    padding: 7px 0px 7px 60px; }
+  .v-test-btn:not(checked) + label:before, .v-test-btn:not(checked) + label:after {
+    left: -55px;
+    width: 40px;
+    height: 40px; } }
