--- a/css/style.css
+++ b/css/style.css
@@ -1181,6 +1181,8 @@
     background-size: cover;
     background-position: top right;
     height: auto; }
+    .v-block.-eighth .v-block-wrapper {
+      padding: 30px 3px; }
     .v-block.-eighth .v-block__desc {
       padding: 30px 0px; }
     .v-block.-eighth .v-block__test {
