--- a/css/style.css
+++ b/css/style.css
@@ -322,7 +322,7 @@
       line-height: 1.548;
       position: relative; }
     .v-block__item-text {
-      font-size: 22px;
+      font-size: 19px;
       line-height: 1.609;
       margin-top: 15px;
       position: relative; }
@@ -1492,3 +1492,8 @@
     left: -55px;
     width: 40px;
     height: 40px; } }
+
+
+.v-active {
+  display: block;
+}
